# ExoVista

./: .gitignore  ExoVista.py  ExoVistaSystem.py  README.md  Scene.py  pyproject.toml  readfits-anim.py  readfits-flipbook.py  readfits.py  setup.py
docs/: ExoVista Change Log.docx  ExoVista User Guide.docx
src/: Image.cpp  constants.py  generate_disks.py  generate_planets.py  generate_scene.py  generate_starspots.py  generate_starspots.py~  load_stars.py  make_starmap.py  make_starmap.py~
src/exovista/: Settings.py  __init__.py  add_background.py  constants.py  generate_disks.py  generate_planets.py  generate_scene.py  generate_starspots.py  load_stars.py  make_starmap.py  nbody.py  parsefits.py  read_solarsystem.py  wrapImage.cpp  wrapImage.pyx  wrapIntegrator.cpp  wrapIntegrator.pyx
